homelab-backend/k8s/overlays/prod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
spec:
  headers:
    accessControlAllowOriginList:
      - "http://example.com"
    accessControlAllowMethods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
    accessControlAllowHeaders: ["*"]
    accessControlMaxAge: 100
    addVaryHeader: true
