homelab-backend/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://example.com"
spec:
  ingressClassName: public
  rules:
    - host: api.example.com
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: backend, port: {number: 8000}}}}
